fix previous groups to include medalists